syntax = "proto3";

package implantpb;

option go_package = ".";

// 定义发送请求信息
message ImplantRequestCommandInfo{
  // 定义发送的参数，采用驼峰命名方式，小写加下划线，如：student_name
  // 参数类型 参数名 标识号(不可重复)
  string implant_id = 1;
  string client_id = 2;
  string command_info = 3;
}

// 定义发送请求信息
message ImplantRunCommandResultInfo{
  // 定义发送的参数，采用驼峰命名方式，小写加下划线，如：student_name
  // 参数类型 参数名 标识号(不可重复)
  string implant_id = 1;
  string client_id = 2;
  string command_run_result_info = 3;
}

// 定义发送请求信息
message ImplantRecvResultInfo{
  // 定义发送的参数，采用驼峰命名方式，小写加下划线，如：student_name
  // 参数类型 参数名 标识号(不可重复)
  //string client_id = 1;
  string result = 1;
}

service ImplantService {

  //rpc ClientRegisterService(stream ClientRegister) returns (stream ClientRecvResultInfo);

  rpc ImplantRequestCommandService(stream ImplantRequestCommandInfo) returns (stream ImplantRequestCommandInfo);
  rpc ImplantSendCommandResultService(ImplantRunCommandResultInfo) returns (ImplantRecvResultInfo);

}